apps/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
  labels:
    app: podinfo
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
  - port: 80
    targetPort: 9898
    protocol: TCP
